--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "express-session": "^1.17.1",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-spotify": "^2.0.0",
+    "request": "^2.88.2",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
