--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.4.1",
     "passport-spotify": "^2.0.0",
     "request": "^2.88.2",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "swagger-ui-express": "^4.1.6"
   }
 }
